[package]
name = "catch_server"
version = "0.1.0"
authors = [
    "Leonard Dahlmann <leo.dahlmann@gmail.com>"
]

[dependencies]
ecs = "0.20.0"
time = "0.1.32"

[dependencies.catch_shared]
path = "../catch_shared"

[dependencies.renet]
path = "../../renet"

[dependencies.cereal]
path = "../../cereal"
