[package]
name = "catch_shared"
version = "0.1.0"
authors = [
    "Leonard Dahlmann <leo.dahlmann@gmail.com>"
]

[dependencies]
log = "*"
#ecs = "*"
time = "0.1.32"
vecmath = "*"
bincode = "*"
rustc-serialize = "*"

[dependencies.ecs]
git = "https://github.com/HeroesGrave/ecs-rs.git"

[dependencies.tiled]
path = "../../rs-tiled"

[dependencies.renet]
path = "../../renet"
